# DecisionTreeExperiment

./: .gitignore  README.md  pyproject.toml  requirements.txt
animation/: __init__.py  predictor.py  tree_builder.py
decision_tree/: __init__.py  node.py  splitter.py  tree.py  utils.py
examples/: __init__.py
examples/cancer/: dataset.py  run.py
examples/sensor_failure/: __init__.py  dataset.py  run.py
results/: cancer_results.txt  sensor_failure_results.txt
tests/: __init__.py  test_node.py  test_splitter.py  test_tree.py
