# pyproject.toml — build metadata, optional dependencies, and tool configuration.
# Install with:  pip install -e .                  (core only)
#                pip install -e ".[animation]"      (+ Manim scenes)
#                pip install -e ".[dev]"            (+ tests / linting / type-checking)

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-tree-edu"
version = "0.1.0"
description = "Educational Decision Tree from scratch with Manim animations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["decision-tree", "machine-learning", "education", "manim"]

dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# Manim Community Edition for the animation scenes
animation = [
    "manim>=0.18",
]
# Development: testing, linting, static analysis
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -q"

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]   # line-length handled by formatter

# ---------------------------------------------------------------------------
# Mypy (static type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version      = "3.11"
strict              = true
ignore_missing_imports = true   # Manim ships without py.typed
